# lms-summarizer

./: .gitignore  CLAUDE.md  README.md  build_mac_pyinstaller.sh  gui_app.py  lms-summarizer.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
.tasks/: config.yml
.tasks/backlog/: faster-whisper-cpu-model-optimization.md
.tasks/done/2026-W13/: cdp-video-extractor-revival.md  lecture-list-cache.md  remove-whisper-cpp-add-distil.md
.tasks/done/2026-W16/: distil-model-korean-broken.md
.tasks/in-progress/: file-save-silent-failure.md  timeout-dialog-freeze.md
.tasks/todo/: cdp-audio-video-split.md  distil-model-korean-broken.md  faster-whisper-gpu-windows.md  file-save-silent-failure.md  lecture-list-cache.md  lecture-list-scroll-timeout.md  timeout-dialog-freeze.md
.tasks/waiting/: faster-whisper-gpu-windows.md  lecture-list-scroll-timeout.md
assets/: icon.icns
scripts/: build_windows.ps1  release.sh
src/: __init__.py  config.py  login.py  main.py  pipeline_stage.py  playwright_example.py  user_setting.py  video_parser.py
src/audio_pipeline/: converter.py  model_manager.py  pipeline.py  transcriber.py
src/gui/: main.py  state.py  theme.py
src/gui/components/: header.py  input_field.py  log_area.py  log_drawer.py  model_selector.py  stage_selector.py
src/gui/config/: constants.py  course_models.py  settings.py  styles.py
src/gui/core/: __init__.py  artifact_detector.py  file_manager.py  module_loader.py  thread_safe.py  update_checker.py  validators.py
src/gui/ui/: __init__.py
src/gui/views/: course_list_view.py  main_view.py  progress_view.py  (+1 more)
src/summarize_pipeline/: pipeline.py  prompts.py  summarizer.py
src/video_pipeline/: __init__.py  course_scraper.py  download_video.py  login.py  pipeline.py  video_parser.py
test/: audio_pipeline_test.py
(+33 files in other folders)
