[project]
name = "lms-summarizer"
version = "1.9.2"
description = "숭실대학교 LMS 강의 동영상 다운로드 및 AI 요약 도구"
requires-python = ">=3.11,<3.13"

dependencies = [
    "openai>=1.84.0",
    "playwright>=1.52.0",
    "pyperclip>=1.9.0",
    "flet[all]==0.81.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "av>=13.0.0",
    "anthropic>=0.84.0",
    "google-genai>=1.66.0",
    "faster-whisper>=1.1.0",
]

[project.scripts]
lms-summarizer = "src.gui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Windows에서도 의존성 해결 가능하도록 설정
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
