[project]
name = "lms-summarizer"
version = "1.9.3"
description = "숭실대학교 LMS 강의 동영상 다운로드 및 AI 요약 도구"
requires-python = ">=3.11,<3.13"

dependencies = [
    "openai>=1.84.0",
    "playwright>=1.52.0",
    "pyperclip>=1.9.0",
    "flet[all]==0.81.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "av>=13.0.0",
    "anthropic>=0.84.0",
    "google-genai>=1.66.0",
    "faster-whisper>=1.1.0",
]

[project.scripts]
lms-summarizer = "src.gui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Windows에서도 의존성 해결 가능하도록 설정
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[project.optional-dependencies]
# CUDA 12 런타임 — 시스템 CUDA 버전(12/13+)과 무관하게 ctranslate2 GPU 가속 제공
# 시스템에 CUDA 12가 깔려 있어도 충돌 없음. GPU 없는 사용자는 설치 불필요.
# 설치: uv sync --extra cuda12
cuda12 = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
